--- a/index.htm
+++ b/index.htm
@@ -141,9 +141,9 @@
 <p><strong>Senior Product Manager, HRIS Sync Lead</strong></p>
 
 <ul>
-<li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link"><strong>HRIS</strong></a> <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link"><strong>Sync</strong></a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval"><strong>Proxy Approval</strong></a> <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval"><strong>driven by org chart</strong></a>.</li>
+<li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link"><strong>HRIS</strong></a> <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link"><strong>Sync</strong></a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link"><strong>Proxy Approval</strong></a> <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2"><strong>driven by org chart</strong></a>.</li>
 <li>Achieved <strong>37% engagement rate</strong> with HRIS features in the first quarter after launch.</li>
-<li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer"><strong>Self-Serve Bulk Candidate Importer</strong></a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import"><strong>days to minutes</strong></a>.</li>
+<li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer" id="bulk-candidate-importer-link"><strong>Self-Serve Bulk Candidate Importer</strong></a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import" id="bulk-candidate-importer-link-2"><strong>days to minutes</strong></a>.</li>
 </ul></div><div style=""><div class="layout-grid media-grid grid-items-2"><img src="images/Add%20user%20%3E%20Link%20profile_1.png" class=" size-contain position-center-center"><img src="images/Screenshot%202023-03-30%20at%208.57.42%20AM.png" class=" size-contain position-center-center"></div>
 
 </div><img src="images/Screen%20Shot%202022-06-28%20at%204.41.35%20PM.png" class=" size-contain position-center-center" style="">
@@ -154,13 +154,13 @@
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-2 media-grid" style="width: 100%; font-size: 0.766rem;">
-        <div style=""><h4 id="hurdaiberkeleyca2023—present"><a href="https://hurd.ai">HURD AI</a>, Berkeley, CA (2023 — Present)</h4>
+        <div style=""><h4 id="hurdaiberkeleyca2023—present"><a href="https://hurd.ai" id="hurd-ai-link">HURD AI</a>, Berkeley, CA (2023 — Present)</h4>
 
 <p><strong>Co-founder &amp; Product Advisor</strong></p>
 
 <ul>
 <li>Led the development of AI-powered educational tools: a <strong>Mac app</strong> and a <strong>web-based chatbot</strong>.</li>
-<li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta"><strong>700% user growth</strong></a> post launch.</li>
+<li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta" id="hurd-ai-growth-link"><strong>700% user growth</strong></a> post launch.</li>
 <li>Versatility in roles, including Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
 </ul></div><div style=""><div class="layout-grid media-grid grid-items-4"><img src="images/search-highlight-app-2x.gif" class=" size-contain position-center-center"><img src="images/fast-summarize-edit-app.gif" class=" size-contain position-center-center"><img src="images/iVBORw0KGgoAAAANSUhEUgAABaQAAAt4CAYAAAAPGaGtAAAABGdBTUEAA1teXP8meAAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAAB%203.PNG" class=" size-contain position-center-center"><img src="images/iVBORw0KGgoAAAANSUhEUgAABaQAAAt4CAYAAAAPGaGtAAAABGdBTUEAA1teXP8meAAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAAB%204.PNG" class=" size-contain position-center-center"></div>
 
@@ -320,7 +320,7 @@
 
 <p>&nbsp;</p>
 
-<p>Additional Recommendations from Colleagues on <a href="https://www.linkedin.com/in/kevinmiddleton/details/recommendations/"><strong>LinkedIn</strong></a></p></div>
+<p>Additional Recommendations from Colleagues on <a href="https://www.linkedin.com/in/kevinmiddleton/details/recommendations/" id="linkedin-recommendations-link"><strong>LinkedIn</strong></a></p></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
