--- a/index.htm
+++ b/index.htm
@@ -15,8 +15,8 @@
     <meta property="og:url" content="https://middleton.io">
     <meta property="og:image" content="images/HeyThere.png">
     <link rel="stylesheet" href="engine/main.css">
-    <link rel="stylesheet" href="theme/sanfrancisco.css" />
-    <link rel="stylesheet" href="engine/katex/katex.min.css" />
+    <link rel="stylesheet" href="theme/sanfrancisco.css">
+    <link rel="stylesheet" href="engine/katex/katex.min.css">
     
     <!--<link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -141,10 +141,10 @@
 <p><strong>Senior Product Manager, HRIS Sync Lead</strong></p>
 
 <ul>
-<li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link"><strong>HRIS</strong></a> <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" alt="Lever User Profile with HRIS Sync" id="hris-sync-at-lever-link"><strong>Sync</strong></a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link"><strong>Proxy Approval</strong></a> <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2"><strong>driven by org chart</strong></a>.</li>
+<li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link"><strong>HRIS</strong></a> <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link"><strong>Sync</strong></a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link"><strong>Proxy Approval</strong></a> <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2"><strong>driven by org chart</strong></a>.</li>
 <li>Achieved <strong>37% engagement rate</strong> with HRIS features in the first quarter after launch.</li>
 <li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer" id="bulk-candidate-importer-link"><strong>Self-Serve Bulk Candidate Importer</strong></a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import" id="bulk-candidate-importer-link-2"><strong>days to minutes</strong></a>.</li>
-</ul></div><div style=""><div class="layout-grid media-grid grid-items-2"><img src="images/Add%20user%20%3E%20Link%20profile_1.png" class=" size-contain position-center-center"><img src="images/Screenshot%202023-03-30%20at%208.57.42%20AM.png" alt="Lever Proxy Approval" class=" size-contain position-center-center"></div>
+</ul></div><div style=""><div class="layout-grid media-grid grid-items-2"><img src="images/Add%20user%20%3E%20Link%20profile_1.png" alt="Lever User Profile with HRIS Sync" class=" size-contain position-center-center"><img src="images/Screenshot%202023-03-30%20at%208.57.42%20AM.png" alt="Lever Proxy Approval" class=" size-contain position-center-center"></div>
 
 </div><img src="images/Screen%20Shot%202022-06-28%20at%204.41.35%20PM.png" alt="Lever Self-Serve Bulk Candidate Importer" class=" size-contain position-center-center" style="">
       </div>
