--- a/index.htm
+++ b/index.htm
@@ -69,12 +69,12 @@
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.625rem;">
         <div style=""><h3 id="professionalexperience">Professional Experience</h3>
 
-<h4 id="oraclesanfranciscoca2013—2018"><a href="https://www.oracle.com" id="oracle-link">ORACLE</a>, San Francisco, CA (2013 — 2018)</h4>
+<h4 id="oraclesanfranciscoca2013—2018"><a href="https://www.oracle.com" id="oracle-link" onclick="sendCustomTagToClarity('Link Click', 'Oracle Link')">ORACLE</a>, San Francisco, CA (2013 — 2018)</h4>
 
 <p><strong>Senior Product Manager, Engage &amp; Social Network Expansion</strong></p>
 
 <ul>
-<li><strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html" id="linkedin-integration-link">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="sina-weibo-integration-link">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="instagram-integration-link">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr" id="tumblr-integration-link">Tumblr</a>.</li>
+<li><strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html" id="linkedin-integration-link" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Integration')">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="sina-weibo-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Sina Weibo Integration')">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="instagram-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Instagram Integration')">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr" id="tumblr-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Tumblr Integration')">Tumblr</a>.</li>
 <li><strong>Launching 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf" id="oracle-engage-link">Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.</li>
 <li>Managed cross-cloud integration of Engage with <strong>Oracle's Marketing, Sales, and Service clouds</strong>, and drove <strong>internationalization across 30 languages</strong>.</li>
 </ul></div><img src="images/Oracle_Engage_v1.png" alt="Oracle Engage Version 1" class=" size-contain position-center-center" style=""><img src="images/Oracle-Engage-v2.png" alt="Oracle Engage Version 2" class=" size-contain position-center-center" style="">
@@ -85,12 +85,12 @@
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.859rem;">
-        <div style=""><h4 id="rocketlawyersanfranciscoca2018—2021"><a href="https://www.rocketlawyer.com" id="rocket-lawyer-link">ROCKET LAWYER</a>, San Francisco, CA (2018 — 2021)</h4>
+        <div style=""><h4 id="rocketlawyersanfranciscoca2018—2021"><a href="https://www.rocketlawyer.com" id="rocket-lawyer-link" onclick="sendCustomTagToClarity('Link Click', 'Rocket Lawyer')">ROCKET LAWYER</a>, San Francisco, CA (2018 — 2021)</h4>
 
 <p><strong>Senior Product Manager, Core Product &amp; Platform</strong></p>
 
 <ul>
-<li>Launched <a href="https://www.rocketlawyer.com/newsroom/rocket-lawyer-covea-deliver-legal-benefits-to-insurance-customers" id="co-branded-partner-sites-link"><strong>co-branded partner sites</strong></a>, accounting for <strong>16% of European traffic</strong>, establishing a new revenue stream.</li>
+<li>Launched <a href="https://www.rocketlawyer.com/newsroom/rocket-lawyer-covea-deliver-legal-benefits-to-insurance-customers" id="co-branded-partner-sites-link" onclick="sendCustomTagToClarity('Link Click', 'Co-branded Partner Sites')"><strong>co-branded partner sites</strong></a>, accounting for <strong>16% of European traffic</strong>, establishing a new revenue stream.</li>
 <li>Drove a <strong>5% increase in mobile conversions</strong> through A/B testing and a <strong>13% increase in RocketSign start rates</strong>.</li>
 </ul></div><div style=""><div class="layout-grid media-grid grid-items-3"><img src="images/Covea_Login_1.png" alt="Covea Login Screen" class=" size-contain position-center-center"><img src="images/Covea_Onboarding.png" alt="Covea Onboarding Process" class=" size-contain position-center-center"><img src="images/covea_create_doc.png" alt="Covea Document Creation" class=" size-contain position-center-center"></div>
 
@@ -104,13 +104,13 @@
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.719rem;">
-        <div style=""><h4 id="sendososanfranciscoca2021"><a href="https://www.sendoso.com" id="sendoso-link">SENDOSO</a>, San Francisco, CA (2021)</h4>
+        <div style=""><h4 id="sendososanfranciscoca2021"><a href="https://www.sendoso.com" id="sendoso-link" onclick="sendCustomTagToClarity('Link Click', 'Sendoso')">SENDOSO</a>, San Francisco, CA (2021)</h4>
 
 <p><strong>Senior Product Manager, Core Platform &amp; eGift Expansion</strong></p>
 
 <ul>
 <li><a href="https://core.sendoso.com/blog/scale-globally-with-sendoso/?cmdf=Expanded%20Gift%20Selections">Expanded</a> <strong>US eGift catalog by 23%</strong> and <strong>international catalog by 67%</strong>.</li>
-<li>Formed <strong>strategic partnerships</strong>, including <a href="https://core.sendoso.com/blog/square-integration/?cmdf=square" id="square-integration-link"><strong>Square</strong></a>, for global market growth.</li>
+<li>Formed <strong>strategic partnerships</strong>, including <a href="https://core.sendoso.com/blog/square-integration/?cmdf=square" id="square-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Square Integration')"><strong>Square</strong></a>, for global market growth.</li>
 <li>Enhanced eGift internal tooling to <strong>improve operational efficiency</strong> and launched a feature-tiering platform component, <strong>encouraging customer upgrades</strong>.</li>
 </ul></div><img src="images/Screen%20Recording%201-23-2023%20at%2011.34%20AM.gif" alt="Screen Recording of Sendoso eGift Experience" class=" size-contain position-center-center" style=""><img src="images/Square_LogoLockup_White.png" alt="Square Logo" class=" size-contain position-center-center" style="">
       </div>
@@ -120,12 +120,12 @@
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-3 media-grid" style="width: 100%; font-size: 0.719rem;">
-        <div style=""><h4 id="leversanfranciscoca2021—2023"><a href="https://www.lever.co" id="lever-link">LEVER</a>, San Francisco, CA (2021 — 2023)</h4>
+        <div style=""><h4 id="leversanfranciscoca2021—2023"><a href="https://www.lever.co" id="lever-link" onclick="sendCustomTagToClarity('Link Click', 'Lever')">LEVER</a>, San Francisco, CA (2021 — 2023)</h4>
 
 <p><strong>Senior Product Manager, HRIS Sync Lead</strong></p>
 
 <ul>
-<li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link"><strong>HRIS</strong></a> <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link"><strong>Sync</strong></a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link"><strong>Proxy Approval</strong></a> <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2"><strong>driven by org chart</strong></a>.</li>
+<li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link"><strong>HRIS</strong></a> <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')"><strong>Sync</strong></a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link"><strong>Proxy Approval</strong></a> <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2"><strong>driven by org chart</strong></a>.</li>
 <li>Achieved <strong>37% engagement rate</strong> with HRIS features in the first quarter after launch.</li>
 <li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer" id="bulk-candidate-importer-link"><strong>Self-Serve Bulk Candidate Importer</strong></a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import" id="bulk-candidate-importer-link-2"><strong>days to minutes</strong></a>.</li>
 </ul></div><div style=""><div class="layout-grid media-grid grid-items-2"><img src="images/Add%20user%20%3E%20Link%20profile_1.png" alt="Lever User Profile with HRIS Sync" class=" size-contain position-center-center"><img src="images/Screenshot%202023-03-30%20at%208.57.42%20AM.png" alt="Lever Proxy Approval" class=" size-contain position-center-center"></div>
@@ -138,13 +138,13 @@
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-grid grid-items-2 media-grid" style="width: 100%; font-size: 0.766rem;">
-        <div style=""><h4 id="hurdaiberkeleyca2023—present"><a href="https://hurd.ai" id="hurd-ai-link">HURD AI</a>, Berkeley, CA (2023 — Present)</h4>
+        <div style=""><h4 id="hurdaiberkeleyca2023—present"><a href="https://hurd.ai" id="hurd-ai-link" onclick="sendCustomTagToClarity('Link Click', 'Hurd AI Link')">HURD AI</a>, Berkeley, CA (2023 — Present)</h4>
 
 <p><strong>Co-founder &amp; Product Advisor</strong></p>
 
 <ul>
 <li>Led the development of AI-powered educational tools: a <strong>Mac app</strong> and a <strong>web-based chatbot</strong>.</li>
-<li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta" id="hurd-ai-growth-link"><strong>700% user growth</strong></a> post launch.</li>
+<li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta" id="hurd-ai-growth-link" onclick="sendCustomTagToClarity('Link Click', 'Hurd AI Growth')"><strong>700% user growth</strong></a> post launch.</li>
 <li>Versatility in roles, including Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
 </ul></div><div style=""><div class="layout-grid media-grid grid-items-4"><img src="images/search-highlight-app-2x.gif" alt="GIF Showing Hurd AI Search Highlight Feature in App" class=" size-contain position-center-center"><img src="images/fast-summarize-edit-app.gif" alt="GIF Demonstrating Fast Summarization in App" class="size-contain position-center-center"><img src="images/iVBORw0KGgoAAAANSUhEUgAABaQAAAt4CAYAAAAPGaGtAAAABGdBTUEAA1teXP8meAAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAAB%203.PNG" class=" size-contain position-center-center" alt="Hurd AI Mobile Web App"><img src="images/iVBORw0KGgoAAAANSUhEUgAABaQAAAt4CAYAAAAPGaGtAAAABGdBTUEAA1teXP8meAAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAAB%204.PNG" class=" size-contain position-center-center" alt="Hurd AI Mobile Web App Detail"></div>
 
@@ -304,7 +304,7 @@
 
 <p>&nbsp;</p>
 
-<p>Additional Recommendations from Colleagues on <a href="https://www.linkedin.com/in/kevinmiddleton/details/recommendations/" id="linkedin-recommendations-link"><strong>LinkedIn</strong></a></p></div>
+<p>Additional Recommendations from Colleagues on <a href="https://www.linkedin.com/in/kevinmiddleton/details/recommendations/" id="linkedin-recommendations-link" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Recommendations')"><strong>LinkedIn</strong></a></p></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
