--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,7 @@
     <meta property="og:description" content="Welcome! I'm Kevin Middleton, a seasoned Product Manager passionate about SaaS, innovation, and driving growth. Discover my journey, expertise, and insights in the realm of product management.">
     <meta property="og:url" content="https://middleton.io">
     <meta property="og:image" content="images/HeyThere.png">
+    <meta name="msvalidate.01" content="C627034BB5D81C3C3622345E46238843">
     <link rel="stylesheet" href="engine/main.css">
     <link rel="stylesheet" href="theme/sanfrancisco.css">
     <link rel="stylesheet" href="engine/katex/katex.min.css">
