--- a/index.htm
+++ b/index.htm
@@ -93,7 +93,7 @@
 <li><strong>Doubled network coverage</strong> for Oracle Social Cloud by integrating key social platforms like <a href="https://finance.yahoo.com/news/oracle-social-cloud-launches-linkedin-120000379.html" id="linkedin-integration-link" onclick="sendCustomTagToClarity('Link Click', 'LinkedIn Integration')">LinkedIn</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="sina-weibo-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Sina Weibo Integration')">Sina Weibo</a>, <a href="https://www.yahoo.com/news/finance/news/oracle-social-cloud-adds-support-120000916.html" id="instagram-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Instagram Integration')">Instagram</a>, and <a href="https://docs.oracle.com/cloud/social/doc.1/srm/vitrue-srm-settings/the-resources-tab-social-properties.html?cmdf=tumblr" id="tumblr-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Tumblr Integration')">Tumblr</a>.</li>
 <li><strong>Launching 32 features in 12 months</strong>, overhauling <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/New%20Engage%20Datasheet.pdf" id="oracle-engage-link">Oracle Social Cloud's Engage product</a>, driven by customer feedback and beta testing.</li>
 <li>Managed cross-cloud integration of Engage with <strong>Oracle's Marketing, Sales, and Service clouds</strong>, and drove <strong>internationalization across 30 languages</strong>.</li>
-</ul></div><img src="images/Oracle_Engage_v1.png" alt="Oracle Engage Version 1" class=" size-contain position-center-center" style=""><img src="images/Oracle-Engage-v2.png" alt="Oracle Engage Version 2" class=" size-contain position-center-center" style="">
+</ul></div><img src="images/Oracle_Engage_v1.png" alt="Oracle Engage Version 1" class="lightbox-enabled size-contain position-center-center" style=""><img src="images/Oracle-Engage-v2.png" alt="Oracle Engage Version 2" class="lightbox-enabled size-contain position-center-center" style="">
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
@@ -108,11 +108,11 @@
 <ul>
 <li>Launched <a href="https://www.rocketlawyer.com/newsroom/rocket-lawyer-covea-deliver-legal-benefits-to-insurance-customers" id="co-branded-partner-sites-link" onclick="sendCustomTagToClarity('Link Click', 'Co-branded Partner Sites')"><strong>co-branded partner sites</strong></a>, accounting for <strong>16% of European traffic</strong>, establishing a new revenue stream.</li>
 <li>Drove a <strong>5% increase in mobile conversions</strong> through A/B testing and a <strong>13% increase in RocketSign start rates</strong>.</li>
-</ul></div><div style=""><div class="layout-grid media-grid grid-items-3"><img src="images/Covea_Login_1.png" alt="Covea Login Screen" class=" size-contain position-center-center"><img src="images/Covea_Onboarding.png" alt="Covea Onboarding Process" class=" size-contain position-center-center"><img src="images/covea_create_doc.png" alt="Covea Document Creation" class=" size-contain position-center-center"></div>
+</ul></div><div style=""><div class="layout-grid media-grid grid-items-3"><img src="images/Covea_Login_1.png" alt="Covea Login Screen" class=" size-contain position-center-center"><img src="images/Covea_Onboarding.png" alt="Covea Onboarding Process" class="lightbox-enabled size-contain position-center-center"><img src="images/covea_create_doc.png" alt="Covea Document Creation" class="lightbox-enabled size-contain position-center-center"></div>
 
 
 
-</div><img src="images/unnamed-3.png" alt="Frictionless Mbile Legal Document Interview" class=" size-contain position-center-center" style="">
+</div><img src="images/unnamed-3.png" alt="Frictionless Mbile Legal Document Interview" class="lightbox-enabled size-contain position-center-center" style="">
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
@@ -128,7 +128,7 @@
 <li><a href="https://core.sendoso.com/blog/scale-globally-with-sendoso/?cmdf=Expanded%20Gift%20Selections">Expanded</a> <strong>US eGift catalog by 23%</strong> and <strong>international catalog by 67%</strong>.</li>
 <li>Formed <strong>strategic partnerships</strong>, including <a href="https://core.sendoso.com/blog/square-integration/?cmdf=square" id="square-integration-link" onclick="sendCustomTagToClarity('Link Click', 'Square Integration')"><strong>Square</strong></a>, for global market growth.</li>
 <li>Enhanced eGift internal tooling to <strong>improve operational efficiency</strong> and launched a feature-tiering platform component, <strong>encouraging customer upgrades</strong>.</li>
-</ul></div><img src="images/Screen%20Recording%201-23-2023%20at%2011.34%20AM.gif" alt="Screen Recording of Sendoso eGift Experience" class=" size-contain position-center-center" style=""><img src="images/Square_LogoLockup_White.png" alt="Square Logo" class=" size-contain position-center-center" style="">
+</ul></div><img src="images/Screen%20Recording%201-23-2023%20at%2011.34%20AM.gif" alt="Screen Recording of Sendoso eGift Experience" class="lightbox-enabled size-contain position-center-center" style=""><img src="images/Square_LogoLockup_White.png" alt="Square Logo" class="lightbox-enabled size-contain position-center-center" style="">
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
@@ -144,9 +144,9 @@
 <li>Created and launched <a href="https://www.lever.co/blog/lever-winter-release-2023?cmdf=HRIS%20Organization%20Configuration%20approval" id="lever-winter-2023-release-link"><strong>HRIS</strong></a> <a href="https://help.lever.co/hc/en-us/articles/205697679-Adding-and-managing-users?cmdf=HRIS%20Organization%20Configuration%20proxy%20approval" id="hris-sync-at-lever-link" onclick="sendCustomTagToClarity('Link Click', 'HRIS Sync at Lever')"><strong>Sync</strong></a> to bring <strong>intelligent automations</strong> to Lever, including <a href="https://www.lever.co/blog/lever-spring-release-2023?cmdf=proxy%20approval" id="proxy-approval-link"><strong>Proxy Approval</strong></a> <a href="https://help.lever.co/hc/en-us/articles/13832873976205-Approving-job-postings-requisitions-and-offers-by-proxy?cmdf=proxy%20approval" id="proxy-approval-link-2"><strong>driven by org chart</strong></a>.</li>
 <li>Achieved <strong>37% engagement rate</strong> with HRIS features in the first quarter after launch.</li>
 <li>Launched <a href="https://www.lever.co/blog/lever-summer-release-2022?cmdf=self%20serve%20bulk%20candidate%20importer" id="bulk-candidate-importer-link"><strong>Self-Serve Bulk Candidate Importer</strong></a>, significantly reducing bulk candidate upload times from <a href="https://help.lever.co/hc/en-us/articles/6608500020749?cmdf=Bulk%20importing%20import" id="bulk-candidate-importer-link-2"><strong>days to minutes</strong></a>.</li>
-</ul></div><div style=""><div class="layout-grid media-grid grid-items-2"><img src="images/Add%20user%20%3E%20Link%20profile_1.png" alt="Lever User Profile with HRIS Sync" class=" size-contain position-center-center"><img src="images/Screenshot%202023-03-30%20at%208.57.42%20AM.png" alt="Lever Proxy Approval" class=" size-contain position-center-center"></div>
+</ul></div><div style=""><div class="layout-grid media-grid grid-items-2"><img src="images/Add%20user%20%3E%20Link%20profile_1.png" alt="Lever User Profile with HRIS Sync" class=" size-contain position-center-center"><img src="images/Screenshot%202023-03-30%20at%208.57.42%20AM.png" alt="Lever Proxy Approval" class="lightbox-enabled size-contain position-center-center"></div>
 
-</div><img src="images/Screen%20Shot%202022-06-28%20at%204.41.35%20PM.png" alt="Lever Self-Serve Bulk Candidate Importer" class=" size-contain position-center-center" style="">
+</div><img src="images/Screen%20Shot%202022-06-28%20at%204.41.35%20PM.png" alt="Lever Self-Serve Bulk Candidate Importer" class="lightbox-enabled size-contain position-center-center" style="">
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
@@ -162,7 +162,7 @@
 <li>Led the development of AI-powered educational tools: a <strong>Mac app</strong> and a <strong>web-based chatbot</strong>.</li>
 <li>Drove <a href="https://www.producthunt.com/products/hurd-ai-beta#hurd-ai-beta" id="hurd-ai-growth-link" onclick="sendCustomTagToClarity('Link Click', 'Hurd AI Growth')"><strong>700% user growth</strong></a> post launch.</li>
 <li>Versatility in roles, including Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
-</ul></div><div style=""><div class="layout-grid media-grid grid-items-4"><img src="images/search-highlight-app-2x.gif" alt="GIF Showing Hurd AI Search Highlight Feature in App" class=" size-contain position-center-center"><img src="images/fast-summarize-edit-app.gif" alt="GIF Demonstrating Fast Summarization in App" class="size-contain position-center-center"><img src="images/iVBORw0KGgoAAAANSUhEUgAABaQAAAt4CAYAAAAPGaGtAAAABGdBTUEAA1teXP8meAAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAAB%203.PNG" class=" size-contain position-center-center" alt="Hurd AI Mobile Web App"><img src="images/iVBORw0KGgoAAAANSUhEUgAABaQAAAt4CAYAAAAPGaGtAAAABGdBTUEAA1teXP8meAAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAAB%204.PNG" class=" size-contain position-center-center" alt="Hurd AI Mobile Web App Detail"></div>
+</ul></div><div style=""><div class="layout-grid media-grid grid-items-4"><img src="images/search-highlight-app-2x.gif" alt="GIF Showing Hurd AI Search Highlight Feature in App" class="lightbox-enabled size-contain position-center-center"><img src="images/fast-summarize-edit-app.gif" alt="GIF Demonstrating Fast Summarization in App" class="lightbox-enabled size-contain position-center-center"><img src="images/iVBORw0KGgoAAAANSUhEUgAABaQAAAt4CAYAAAAPGaGtAAAABGdBTUEAA1teXP8meAAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAAB%203.PNG" class="lightbox-enabled size-contain position-center-center" alt="Hurd AI Mobile Web App"><img src="images/iVBORw0KGgoAAAANSUhEUgAABaQAAAt4CAYAAAAPGaGtAAAABGdBTUEAA1teXP8meAAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAAB%204.PNG" class="lightbox-enabled size-contain position-center-center" alt="Hurd AI Mobile Web App Detail"></div>
 
 
 
@@ -434,5 +434,74 @@
 
   gtag('config', 'G-PFN85T46WX');
 </script>
+    
+    <!-- Image Lightbox -->
+    <script>
+document.addEventListener('DOMContentLoaded', function () {
+    // Function to insert lightbox HTML
+    function addLightboxHtml() {
+        const lightboxHtml = `
+            <div id="lightbox" class="lightbox" onclick="closeLightbox(event)">
+                <button class="close-button">&times;</button>
+                <button class="prev-button">&#10094;</button>
+                <button class="next-button">&#10095;</button>
+                <img class="lightbox-image" src="" alt="">
+                <div class="caption"></div>
+            </div>
+        `;
+        document.body.insertAdjacentHTML('beforeend', lightboxHtml);
+    }
+
+    // Function to open the lightbox
+    function openLightbox(image) {
+        const lightbox = document.getElementById('lightbox');
+        const lightboxImage = lightbox.querySelector('.lightbox-image');
+        const caption = lightbox.querySelector('.caption');
+
+        lightboxImage.src = image.src;
+        lightboxImage.alt = image.alt;
+        caption.textContent = image.alt;
+
+        lightbox.classList.add('active');
+    }
+
+    // Function to close the lightbox
+    window.closeLightbox = function (event) {
+        if (event.target !== event.currentTarget && !event.target.classList.contains('close-button')) {
+            return;
+        }
+        document.getElementById('lightbox').classList.remove('active');
+    }
+
+    // Function to change the image in the lightbox
+    function changeImage(step) {
+        const images = Array.from(document.querySelectorAll('.lightbox-enabled'));
+        const currentImage = document.querySelector('.lightbox-image');
+        let currentIndex = images.findIndex(img => img.src === currentImage.src);
+
+        currentIndex += step;
+        if (currentIndex >= images.length) currentIndex = 0;
+        if (currentIndex < 0) currentIndex = images.length - 1;
+
+        openLightbox(images[currentIndex]);
+    }
+
+    // Attach event listeners to images and navigation buttons
+    function setupLightbox() {
+        document.querySelectorAll('.lightbox-enabled').forEach(image => {
+            image.style.cursor = 'pointer';
+            image.addEventListener('click', () => openLightbox(image));
+        });
+
+        document.querySelector('.prev-button').addEventListener('click', () => changeImage(-1));
+        document.querySelector('.next-button').addEventListener('click', () => changeImage(1));
+    }
+
+    // Initialize the lightbox
+    addLightboxHtml();
+    setupLightbox();
+});
+</script>
+
   </body>
 </html>
