--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="engine/main.css">
     <link rel="stylesheet" href="theme/sanfrancisco.css">
     <link rel="stylesheet" href="engine/katex/katex.min.css">
+    <link rel="stylesheet" href="lightbox/lightbox.css">
     
     <!--<link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
