--- a/index.htm
+++ b/index.htm
@@ -349,10 +349,10 @@
     <script src="engine/index.js"></script>
     <!--<script src="engine/d3v4.min.js" charset="utf-8"></script>
     <script src="engine/charts.min.js" charset="utf-8"></script>
-    <script src="engine/billboard.min.js"></script>-->
+    <script src="engine/billboard.min.js"></script>
     <script src="engine/pptxgen.min.js"></script>
                                                    <script src="engine/pfill.js"></script>
-    <script src="engine/published.js"></script>
+    <script src="engine/published.js"></script>-->
 
     <script>
       Reveal.configure({
