--- a/index.htm
+++ b/index.htm
@@ -352,7 +352,7 @@
     <script src="engine/billboard.min.js"></script>
     <script src="engine/pptxgen.min.js"></script>
                                                    <script src="engine/pfill.js"></script>
-    <script src="engine/published.js"></script>-->
+    <!-- script src="engine/published.js"></script>-->
 
     <script>
       Reveal.configure({
@@ -372,8 +372,6 @@
 
     <!-- Hammer JS -->
     <script src="hammer/hammer.js"></script>
-   
-    <!-- Initalize Hammer JS, including actions for swipe left, right, up, down, and tap -->
     <script>
     document.addEventListener('DOMContentLoaded', function() {
     var element = document.body; // Or any specific element you want to target
@@ -412,6 +410,8 @@
     });
 });
 </script>
+
+<!-- Microsoft Clarity -->
 <script>
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
