--- a/index.htm
+++ b/index.htm
@@ -241,8 +241,8 @@
             </div>
             <div style="">
               <div class="layout-grid media-grid grid-items-2">
-                <img src="images/lever-hris-user-profile.png" class=" size-contain position-center-center">
-                <img src="images/lever-proxy-approval.png" class=" size-contain position-center-center">
+                <img src="images/lever-hris-user-profile.png" alt="Lever User Profile with HRIS Sync" class="lightbox-enabled size-contain position-center-center">
+                <img src="images/lever-proxy-approval.png" alt="Lever Proxy Approval" class="lightbox-enabled size-contain position-center-center">
               </div>
             </div>
             <img src="images/lever-bulk-candidate-importer.png" class=" size-contain position-center-center" style="">
