--- a/index.htm
+++ b/index.htm
@@ -119,8 +119,8 @@
                 <li>Managed cross-cloud integration of Engage with <strong>Oracle's Marketing, Sales, and Service clouds</strong>, and drove <strong>internationalization across 30 languages</strong>. </li>
               </ul>
             </div>
-            <img src="images/oracle-engage-v1.png" class=" size-contain position-center-center" style="">
-            <img src="images/oracle-engage-v2.png" class=" size-contain position-center-center" style="">
+            <img src="images/oracle-engage-v1.png" alt="Oracle Engage Version 1" class="lightbox-enabled size-contain position-center-center" style="">
+            <img src="images/oracle-engage-v2.png" alt="Oracle Engage Version 2" class="lightbox-enabled size-contain position-center-center" style="">
           </div>
           <div class="footnotes"></div>
           <div class="footer">
@@ -155,9 +155,9 @@
             </div>
             <div style="">
               <div class="layout-grid media-grid grid-items-3">
-                <img src="images/covea-login-screen.png" class=" size-contain position-center-center">
-                <img src="images/covea-onboarding-process.png" class=" size-contain position-center-center">
-                <img src="images/covea-document-creation.png" class=" size-contain position-center-center">
+                <img src="images/covea-login-screen.png" alt="Covea Login Screen" class="lightbox-enabled size-contain position-center-center">
+                <img src="images/covea-onboarding-process.png" alt="Covea Onboarding Process" class="lightbox-enabled size-contain position-center-center">
+                <img src="images/covea-document-creation.png" alt="Covea Document Creation" class="lightbox-enabled size-contain position-center-center">
               </div>
             </div>
             <img src="images/legal-document-interview.png" class=" size-contain position-center-center" style="">
@@ -194,8 +194,8 @@
                 <li>Enhanced eGift internal tooling to <strong>improve operational efficiency</strong> and launched a feature-tiering platform component, <strong>encouraging customer upgrades</strong>. </li>
               </ul>
             </div>
-            <img src="images/sendoso-egift-demo.gif" class=" size-contain position-center-center" style="">
-            <img src="images/square-logo.png" class=" size-contain position-center-center" style="">
+            <img src="images/sendoso-egift-demo.gif" alt="Screen Recording of Sendoso eGift Experience" class="lightbox-enabled size-contain position-center-center" style="">
+            <img src="images/square-logo.png" alt="Square Logo" class="size-contain position-center-center" style="">
           </div>
           <div class="footnotes"></div>
           <div class="footer">
@@ -245,7 +245,7 @@
                 <img src="images/lever-proxy-approval.png" alt="Lever Proxy Approval" class="lightbox-enabled size-contain position-center-center">
               </div>
             </div>
-            <img src="images/lever-bulk-candidate-importer.png" class=" size-contain position-center-center" style="">
+            <img src="images/lever-bulk-candidate-importer.png" alt="Lever Self-Serve Bulk Candidate Importer" class="lightbox-enabled size-contain position-center-center" style="">
           </div>
           <div class="footnotes"></div>
           <div class="footer">
@@ -278,14 +278,14 @@
             </div>
             <div style="">
               <div class="layout-grid media-grid grid-items-2">
-                <img src="images/hurd-ai-search-highlight.gif" class=" size-contain position-center-center">
-                <img src="images/hurd-ai-fast-summarization.gif" class=" size-contain position-center-center">
+                <img src="images/hurd-ai-search-highlight.gif" alt="GIF Showing Hurd AI Search Highlight Feature in App" class="lightbox-enabled size-contain position-center-center">
+                <img src="images/hurd-ai-fast-summarization.gif" alt="GIF Demonstrating Fast Summarization in App" class="lightbox-enabled size-contain position-center-center">
               </div>
             </div>
             <div style="">
               <div class="layout-grid media-grid grid-items-2">
-                <img src="images/hurd-ai-mobile-web-app.webp" class=" size-contain position-center-center">
-                <img src="images/hurd-ai-mobile-web-app-detail.webp" class=" size-contain position-center-center">
+                <img src="images/hurd-ai-mobile-web-app.webp" alt="Hurd AI Mobile Web App" class="lightbox-enabled size-contain position-center-center">
+                <img src="images/hurd-ai-mobile-web-app-detail.webp" alt="Hurd AI Mobile Web App Detail" class="lightbox-enabled size-contain position-center-center">
               </div>
             </div>
           </div>
